# DesignPatterns

./: README.md
Creational/AbstractFactoryPattern/: CMakeLists.txt  Client.cpp
Creational/AbstractFactoryPattern/AbstractCarFactory/: CarFactory.cpp  CarFactory.h
Creational/AbstractFactoryPattern/Body/: Body.cpp  Body.h
Creational/AbstractFactoryPattern/ConcreteCarCreater/: Car.cpp  Car.h
Creational/AbstractFactoryPattern/Tire/: Tire.cpp  Tire.h
Creational/Builder/: Builder.cpp
Creational/FactoryPattern/: CMakeLists.txt  makefile
Creational/FactoryPattern/header/: DocumentFramework.h  IMAGEDocument.h  XMLDocument.h
Creational/FactoryPattern/src/: FactoryPattern.cpp  IMAGEDocument.cpp  XMLDocument.cpp
Creational/Singleton/: CMakeLists.txt
MixinVsCRTP/Mixin/: CMakeLists.txt
SOLID/LiskovSubstitutionPrinciple/: LiskovSubstitutionPrinciple.cpp
SOLID/SingleResponsiblePrinciple/: SingleResponsibilityPrinciple.cpp
Structural/AdapterDP/: CMakeLists.txt  Client.cpp
Structural/AdapterDP/Adaptee/: Adaptee.cpp  Adaptee.h
Structural/AdapterDP/Adapter/: Adapter.cpp  Adapter.h
Structural/BridgeDP/: CMakeLists.txt  Client.cpp
Structural/BridgeDP/Abstraction/: Abstraction.cpp  Abstraction.h
Structural/BridgeDP/Implementor/: Implementor.cpp  Implementor.h
